fixed overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -404,6 +404,7 @@ body{
 .contact{
     position: relative;
     background-color: $light-white;
+    overflow: hidden;
     .white-block-left{
         background-color: $dark;
     }
